src/components/collection/card/CollectionCard.less
@import '../../../../resources/styles/_antd-theme.less';

@description-line-height: 24px;
@description-line-number: 3;

.collection-card {
  animation: slide-in 0.5s 0s both;
  background-color: @shade-2;
  min-width: 0;

  .collection-card__title {
    display: flex;
    justify-content: space-between;
    height: 27px;

    .collection-title {
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      -webkit-line-clamp: 1;
    }

    .collection-title-section {
      min-width: 0;
    }
  }

  .collection-card__subtitle {
    margin: 0 0 7px 0;
    font-weight: 700;
    color: @shade-6;
    display: flex;
    justify-content: space-between;
  }

  .tags-container {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    min-height: 38px;

    @media (min-width: @screen-md) {
      justify-content: space-between;
    }

    .tag {
      background-color: @shade-1;
      max-width: 198px;
    }
  }

  &__lesson-guide {
    svg {
      position: relative;
      path {
        fill: @shade-6;
      }
    }
  }

  &__owner-label {
    background-color: #ffffff;
    color: @shade-6;
    font-size: 14px;
    font-weight: bold;
    line-height: 21px;
    position: absolute;
    height: 40px;
    width: 154px;
    border-radius: 0 8px 0 8px;
    align-content: space-between;
    text-align: center;
    padding-top: 8px;
    box-shadow: -2px 2px 2px 0 @shade-6;
    top: 0;
    right: 0;

    svg {
      path {
        fill: @shade-6;
      }
    }
  }

  &__description-preview {
    word-break: break-word;
    white-space: pre-line;
    font-size: 16px;
    line-height: @description-line-height;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: @description-line-number;
    -webkit-box-orient: vertical;
    max-height: calc(@description-line-height * @description-line-number);

    &__icon {
      margin-right: 10px;
      margin-bottom: 5px;
    }

    ul {
      padding-left: 0;
      list-style-type: none;
    }

    li:nth-child(@{description-line-number}) {
      & span {
        display: none;
      }

      &:after {
        content: '...';
      }
    }
  }

  .collection-video-previews {
    margin-top: auto;
  }

  .collection-title-section {
    position: relative;
  }

  .collection-card__detail-row {
    margin-top: 15px;
    display: flex;
  }

  .collection-card__column-preview {
    display: inline-block;
    width: 304px;
  }

  .collection-card__column-detail {
    display: inline-flex;
    flex-direction: column;
    margin-left: 14px;
    width: calc(100% - (304px + 24px));
  }

  .button-row {
    border-top: 2px solid @shade-1;

    .ant-btn-group {
      padding-top: 8px;

      button {
        border-right: 2px solid @shade-1!important;
      }
      button:last-child {
        border-right: none !important;
      }
    }
  }

  .collection-card__buttons {
    margin-top: auto;

    .anticon {
      font-size: 24px;
      height: 24px;
      width: 24px;
    }

    .ant-btn-group {
      padding-bottom: 0;
    }
  }

  &.collection-card--grid {
    .collection-card__detail-row {
      flex-direction: column;
    }

    .collection-card__column-preview {
      width: 100%;
    }

    .collection-card__column-detail {
      margin-top: 12px;
      margin-left: 0;
      width: 100%;
    }

    .tags-container {
      margin: 0;
      justify-content: left;
    }

    .collection-card__owner-label {
      position: relative;
      display: inline-block;
      width: 142px;
      height: 28px;
      padding-top: 2px;
      margin-left: -16px;
      border-radius: 0 8px 8px 0;
      box-shadow: 2px 2px 2px 0 @shade-6;
      padding-left: 8px;
      svg {
        height: 20px;
        width: 20px;
      }
    }
  }

  &.skeleton.ant-skeleton-active .ant-skeleton-content {
    display: block;

    .collection-title {
      height: 24px;
      margin-bottom: 0.5em;
      margin-top: 0;
    }

    .ant-skeleton-paragraph li {
      height: 24px;
    }

    .ant-skeleton-avatar,
    .ant-skeleton-paragraph > li,
    .ant-skeleton-title {
      background: linear-gradient(90deg, #cfd6e6 25%, #b5bccc 37%, #cfd6e6 63%);
      background-size: 400% 100%;
    }
  }
}

